--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,16 @@
 appnope==0.1.0
-bottle==0.12.8
+bottle==0.12.9
 decorator==4.0.4
 gnureadline==6.3.3
 ipdb==0.8.1
 ipython==4.0.0
 ipython-genutils==0.1.0
 path.py==8.1.2
-pbr==1.8.1
 pexpect==4.0.1
 pickleshare==0.5
 ptyprocess==0.5
+requests==2.8.1
 simplegeneric==0.8.1
-six==1.10.0
-stevedore==1.9.0
 traitlets==4.0.0
-virtualenv==13.1.2
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
 wheel==0.24.0
+xmltodict==0.9.2
